--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <head>
+  <meta charset="utf-8">
   <title>"Day in SF"</title>
-  <link rel="stylesheet" href="olessia-style.css" 
+  <link rel="stylesheet" href="olessia-style.css">
 </head>
-
   <body>
     <h1>A Basic Day in San Francisco: A 3 step guide</h1>
     <div class="activity">
