--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
   <meta charset="utf-8">
   <title>"Day in SF"</title>
@@ -37,3 +38,4 @@
              </div>
     </div>
   </body>
+</html>
